# integral-functions

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  working-ex.ipynb
notebooks/: simulation.ipynb
src/integral_functions/: vectorized_funcs.pyx  weight_functions.py
src/integral_functions/methods/: inducing_points.py
