[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "integral_functions"
version = "0.0.1"
license = { text = "BSD 2-Clause License" }
authors = [{ name = "IHME Math Sciences", email = "ihme.math.sciences@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy==1.26.4",
  "scipy==1.13.0",
]

[project.urls]
homepage = "https://github.com/ihmeuw-msca/integral-functions"

[tool.pytest.ini_options]
testpaths = ["tests", "integration"]
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"
